--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
         <a class="btn btn-lg px-5" href="#" role="button"><img src="https://ucarecdn.com/e37a83f4-b943-498b-b2f5-ee82067daa9f/BOTONPLAY2.png" height="50" alt="Play"></a>
     </div>
     </div>
-        <div class="row">
+        
+    </div>
+    <div class="down">
 
-            <a class="btn btn-lg px-3 btn-primary" href="#" role="button"><img src="https://ucarecdn.com/4492dba6-f3ba-435f-a7c2-fc00d39a7012/telegrama.png" height="30" alt="USA flag"></a>
-            <a class="btn btn-lg px-3 btn-primary" href="#" role="button"><img src="https://ucarecdn.com/1b7819f1-9fc0-49b2-b14d-92c6c8c7ce8e/gorjeo.png" height="30" alt="USA flag"></a>
-            <a class="btn btn-lg px-3 btn-primary" href="#" role="button"><img src="https://ucarecdn.com/7021fe83-5d65-48c4-a9c7-b647cc082343/discordia.png" height="30" alt="USA flag"></a>
-        </div>
+        <a class="btn btn-lg px-3 btn-primary" href="#" role="button"><img src="https://ucarecdn.com/4492dba6-f3ba-435f-a7c2-fc00d39a7012/telegrama.png" height="30" alt="USA flag"></a>
+        <a class="btn btn-lg px-3 btn-primary" href="#" role="button"><img src="https://ucarecdn.com/1b7819f1-9fc0-49b2-b14d-92c6c8c7ce8e/gorjeo.png" height="30" alt="USA flag"></a>
+        <a class="btn btn-lg px-3 btn-primary" href="#" role="button"><img src="https://ucarecdn.com/7021fe83-5d65-48c4-a9c7-b647cc082343/discordia.png" height="30" alt="USA flag"></a>
     </div>
    
 
